[package]
name = "clowt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.35.4", features = ["csv", "lazy"] }
reqwest = "0.11.23"
rust-bert = { git = "https://github.com/guillaume-be/rust-bert" }
tokio = { version = "1", features = ["full"] }
